--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ SourceArt/**/*.tga
 # Binary Files
 Binaries/*
 
+# KiteDemo
+Content/KiteDemo/*
+
 # Builds
 Build/*
 
@@ -62,5 +65,3 @@ Saved/*
 # Compiled source files for the engine to use
 Intermediate/*
 
-# Cache files for the editor to use
-DerivedDataCache/*
